# dataprocessor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.toml
.github/workflows/: ci.yaml  semantic_version.yaml
examples/: multiple_outputs_pipeline.py  simple_pipeline.py  text_pipeline.py
examples/data/: filtered_output.csv  input_sequence.csv  output_1_scaled.csv  output_1_sorted.csv  output_2_even_filtered.csv  output_2_even_scaled.csv  pipeline_metadata.json  scaled_output.csv  sorted_output.csv
examples/data/multiple_outputs/: cashflow_report.json  daily_changes.csv  inflows.csv  outflows.csv  pipeline_metadata.json
examples/data/simple/: output_1_filtered.csv  output_2_merged.csv  output_2_odd_filtered.csv  output_2_odd_scaled.csv  pipeline_metadata.json
examples/data/text/: input.txt  lowercase.txt  no_punctuation.txt  pipeline_metadata.json  tokens.csv  tokens_filtered.csv  word_frequency.txt
src/dataprocessor/: __init__.py  logger.py  pipeline.py  step.py  utils.py
src/dataprocessor/scripts/: main.py
tests/test_dataprocessor/: test_pipeline.py  test_step.py
