[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80", "wheel" ]

[project]
name = "dataprocessor"
version = "0.0.0"
description = "Helper module to design and run robust and flexible data processing and analysis pipelines."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

[dependency-groups]
dev = [
  "coverage[toml]>=7.13.4",
  "pytest>=9",
  "pytest-lazy-fixtures>=1.4",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.uv]
required-version = ">=0.10.0"

[tool.ruff]
target-version = "py310"
line-length = 120
fix-only = true

lint.select = [ "ALL" ]
lint.ignore = [ "COM812", "D203", "D212" ]
lint.isort.force-single-line = true

[tool.pytest]
minversion = "9.0"
addopts = [ "-s" ]
testpaths = [
  "tests",
]
log_cli = true
log_cli_level = "DEBUG"

[tool.coverage.run]
branch = true
source = [ "dataprocessor" ]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.coverage.html]
directory = ".coverage_html_report"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
